@@ -10,8 +10,6 @@ import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.annotation.WorkerThread;
 
-import com.annimon.stream.Stream;
-
 import org.json.JSONException;
 import org.json.JSONObject;
 import org.signal.core.util.StreamUtil;
@@ -38,7 +36,10 @@ import java.util.Optional;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
+import java.util.function.Consumer;
 import java.util.regex.Pattern;
+import java.util.stream.Stream;
+import java.util.stream.Collectors;
 import java.util.zip.GZIPOutputStream;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
@@ -114,15 +115,15 @@ public class SubmitDebugLogRepository {
     this.executor = SignalExecutors.SERIAL;
   }
 
-  public void getPrefixLogLines(@NonNull Callback<List<LogLine>> callback) {
-    executor.execute(() -> callback.onResult(getPrefixLogLinesInternal()));
+  public void getPrefixLogLines(@NonNull Consumer<List<LogLine>> callback) {
+    executor.execute(() -> callback.accept(getPrefixLogLinesInternal()));
   }
 
-  public void buildAndSubmitLog(@NonNull Callback<Optional<String>> callback) {
+  public void buildAndSubmitLog(@NonNull Consumer<Optional<String>> callback) {
     SignalExecutors.UNBOUNDED.execute(() -> {
       Log.blockUntilAllWritesFinished();
       LogDatabase.getInstance(context).logs().trimToSize();
-      callback.onResult(submitLogInternal(System.currentTimeMillis(), getPrefixLogLinesInternal(), Tracer.getInstance().serialize()));
+      callback.accept(submitLogInternal(System.currentTimeMillis(), getPrefixLogLinesInternal(), Tracer.getInstance().serialize()));
     });
   }
 
@@ -133,11 +134,11 @@ public class SubmitDebugLogRepository {
     return submitLogInternal(untilTime, getPrefixLogLinesInternal(), Tracer.getInstance().serialize());
   }
 
-  public void submitLogFromReader(DebugLogsViewer.LogReader logReader, @Nullable byte[] trace, Callback<Optional<String>> callback) {
-    SignalExecutors.UNBOUNDED.execute(() -> callback.onResult(submitLogFromReaderInternal(logReader, trace)));
+  public void submitLogFromReader(DebugLogsViewer.LogReader logReader, @Nullable byte[] trace, Consumer<Optional<String>> callback) {
+    SignalExecutors.UNBOUNDED.execute(() -> callback.accept(submitLogFromReaderInternal(logReader, trace)));
   }
 
-  public void writeLogToDisk(@NonNull Uri uri, long untilTime, Callback<Boolean> callback) {
+  public void writeLogToDisk(@NonNull Uri uri, long untilTime, Consumer<Boolean> callback) {
     SignalExecutors.UNBOUNDED.execute(() -> {
       try (ZipOutputStream outputStream = new ZipOutputStream(context.getContentResolver().openOutputStream(uri))) {
         StringBuilder prefixLines = linesToStringBuilder(getPrefixLogLinesInternal(), null);
@@ -152,7 +153,7 @@ public class SubmitDebugLogRepository {
           }
         } catch (IllegalStateException e) {
           Log.e(TAG, "Failed to read row!", e);
-          callback.onResult(false);
+          callback.accept(false);
           return;
         }
 
@@ -162,9 +163,9 @@ public class SubmitDebugLogRepository {
         outputStream.write(Tracer.getInstance().serialize());
         outputStream.closeEntry();
 
-        callback.onResult(true);
+        callback.accept(true);
       } catch (IOException e) {
-        callback.onResult(false);
+        callback.accept(false);
       }
     });
   }
@@ -322,7 +323,7 @@ public class SubmitDebugLogRepository {
     try (Response response = client.newCall(new Request.Builder().url(API_ENDPOINT).get().build()).execute()) {
       ResponseBody body = response.body();
 
-      if (!response.isSuccessful() || body == null) {
+      if (!response.isSuccessful()) {
         throw new IOException("Unsuccessful response: " + response);
       }
 
@@ -344,6 +345,11 @@ public class SubmitDebugLogRepository {
 
       try (Response postResponse = client.newCall(new Request.Builder().url(url).post(post.build()).build()).execute()) {
         if (!postResponse.isSuccessful()) {
+          if (RemoteConfig.internalUser()) {
+            Log.w(TAG, "Internal user failed to upload log: " + postResponse + ", body: " + postResponse.body().string());
+            Log.w(TAG, "debuglogs.org response: " + json.toString(2));
+            Log.w(TAG, "RequestBody length: " + requestBody.contentLength());
+          }
           throw new IOException("Bad response: " + postResponse);
         }
       }
@@ -359,7 +365,7 @@ public class SubmitDebugLogRepository {
   private @NonNull List<LogLine> getPrefixLogLinesInternal() {
     long startTime = System.currentTimeMillis();
 
-    int maxTitleLength = Stream.of(SECTIONS).reduce(0, (max, section) -> Math.max(max, section.getTitle().length()));
+    int maxTitleLength = SECTIONS.stream().reduce(0, (max, section) -> Math.max(max, section.getTitle().length()), Integer::sum);
 
     List<LogLine> allLines = new ArrayList<>();
 
@@ -398,8 +404,7 @@ public class SubmitDebugLogRepository {
 
       List<LogLine> lines = Stream.of(Pattern.compile("\\n").split(content))
                                   .map(s -> new SimpleLogLine(s, LogStyleParser.parseStyle(s), LogStyleParser.parsePlaceholderType(s)))
-                                  .map(line -> (LogLine) line)
-                                  .toList();
+                                  .map(line -> (LogLine) line).collect(Collectors.toList());
 
       out.addAll(lines);
     }
@@ -443,9 +448,5 @@ public class SubmitDebugLogRepository {
     }
 
     return stringBuilder;
-  }
-
-  public interface Callback<E> {
-    void onResult(E result);
   }
 }
