@@ -9,8 +9,6 @@ import android.hardware.camera2.CameraMetadata;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
-import com.annimon.stream.Stream;
-
 import org.signal.core.util.logging.Log;
 import org.signal.ringrtc.CameraControl;
 import org.thoughtcrime.securesms.components.webrtc.EglBaseWrapper;
@@ -22,9 +20,12 @@ import org.webrtc.CameraVideoCapturer;
 import org.webrtc.CapturerObserver;
 import org.webrtc.SurfaceTextureHelper;
 import org.webrtc.VideoFrame;
+import org.webrtc.VideoSink;
 
 import java.util.LinkedList;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.thoughtcrime.securesms.ringrtc.CameraState.Direction.BACK;
 import static org.thoughtcrime.securesms.ringrtc.CameraState.Direction.FRONT;
@@ -47,6 +48,7 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
             private       boolean                   enabled;
             private       boolean                   isInitialized;
             private       int                       orientation;
+  @Nullable private volatile VideoSink              vanitySink;
 
   public Camera(@NonNull Context context,
                 @NonNull CameraEventListener cameraEventListener,
@@ -85,6 +87,7 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
                             new CameraCapturerWrapper(observer));
         capturer.setOrientation(orientation);
         isInitialized = true;
+        setEnabled(enabled);
       });
     }
   }
@@ -105,10 +108,10 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
 
   @Override
   public void setOrientation(@Nullable Integer orientation) {
-    this.orientation = orientation;
+    this.orientation = orientation != null ? orientation : 0;
 
     if (isInitialized && capturer != null) {
-      capturer.setOrientation(orientation);
+      capturer.setOrientation(this.orientation);
     }
   }
 
@@ -118,7 +121,7 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
 
     this.enabled = enabled;
 
-    if (capturer == null) {
+    if (capturer == null || !isInitialized) {
       return;
     }
 
@@ -137,6 +140,15 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
 
   public void setCameraEventListener(@Nullable CameraEventListener cameraEventListener) {
     this.cameraEventListener = cameraEventListener;
+  }
+
+  /**
+   * Set a vanity sink that receives camera frames directly from the capturer,
+   * bypassing the WebRTC VideoTrack pipeline. This allows local preview to work
+   * even when the video track is disabled (e.g., during incoming call ringing).
+   */
+  public void setVanitySink(@Nullable VideoSink vanitySink) {
+    this.vanitySink = vanitySink;
   }
 
   public void dispose() {
@@ -264,10 +276,10 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
 
         if (cameraManager != null) {
           List<String> devices = Stream.of(cameraManager.getCameraIdList())
-                                       .filterNot(id -> isMonochrome(id, cameraManager))
-                                       .toList();
+                                       .filter(id -> !isMonochrome(id, cameraManager))
+                                       .collect(Collectors.toList());
 
-          String frontCamera = Stream.of(devices)
+          String frontCamera = devices.stream()
                                      .filter(id -> isLensFacing(id, cameraManager, CameraMetadata.LENS_FACING_FRONT))
                                      .findFirst()
                                      .orElse(null);
@@ -276,7 +288,7 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
             cameraList.add(frontCamera);
           }
 
-          String backCamera = Stream.of(devices)
+          String backCamera = devices.stream()
                                     .filter(id -> isLensFacing(id, cameraManager, CameraMetadata.LENS_FACING_BACK))
                                     .findFirst()
                                     .orElse(null);
@@ -327,6 +339,10 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
     @Override
     public void onFrameCaptured(VideoFrame videoFrame) {
       observer.onFrameCaptured(videoFrame);
+      VideoSink sink = vanitySink;
+      if (sink != null) {
+        sink.onFrame(videoFrame);
+      }
     }
   }
 }
